# dnd

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alice.yml  bob.yml  pyproject.toml
chars/: alice.yml  alice_drew.yml  all-mooks-11.yml  all-mooks-3.yml  all-mooks-5.yml  bob.yml  boblette-cr-5.yml  boss-and-mooks-11.yml  boss-and-mooks-3.yml  boss-and-mooks-5.yml  cloud-giant-cr-9.yml  dragon-cr-16.yml  elite-warrior-cr-5.yml  ettin-cr-4.yml  eve.yml  golem-cr-16.yml  heroes-11.yml  heroes-3-1dhp.yml  heroes-3-2dhp.yml  heroes-3-modified.yml  heroes-3.yml  heroes-5.yml  trex-cr-8.yml  yeti-cr-9.yml
dnd/: char.py  combat.py  dice.py  plot.py  run.py
dnd/sims/: __init__.py  ac.py  compare.py  single.py
output/: rounds.html  win_ratio.html
test/: char_test.py  combat_test.py  conftest.py  dice_test.py
